--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,7 @@ services:
   minecraft:
     build: .
     container_name: minecraft-server
-    ports:
-      - "25565:25565"
+    network_mode: host
     environment:
       - MEMORY_MIN=1G
       - MEMORY_MAX=2G
